# ArimaTTS

./: LICENSE  README.md  install.sh  vanakkam.sh
festvox/src/unitsel/: setup_clunits
htk/: COPYING  ChangeLog  HTS-2.2_for_HTK-3.4.1.tar.bz2  INSTALL  README
tamil/: README.TXT  config.status  configure  configure.ac  morph_tag1  optionList  parser.sh  radio_phones.scm
tamil/etc/: bi_1  bi_txt  text  voice.defs
tamil/festival/clunits/: all.desc
tamil/festvox/: build_clunits.scm  lex_lts_rules.scm  sied.out  sied_ae.out  ssn_english_lts_rules.scm  ssn_hts_demo_clunits.scm  ssn_hts_demo_clunits_eng.scm  ssn_hts_demo_duration.scm  ssn_hts_demo_durdata.scm  ssn_hts_demo_f0model.scm  ssn_hts_demo_intonation.scm  ssn_hts_demo_lexicon_english.scm  ssn_hts_demo_lexicon_tamil.scm  ssn_hts_demo_other.scm  ssn_hts_demo_phoneset.scm  ssn_hts_demo_phrasing.scm  ssn_hts_demo_tagger.scm  ssn_hts_demo_tokenizer.scm  ssn_hts_demo_tokenizer_eng.scm  tamil_TokenToWords.scm
tamil/lists/: nasal  out_word  tmp  trans_word
tamil/models/: eng_pos.model  eng_pos.model.props  english-bidirectional-distsim.tagger.props  hindi_pos.model  hindi_pos.model.props  tamil_pos.props  tamil_pos.tagger.props
tamil/prompt-lab/: 1.lab
tamil/prompt-utt/: 1.utt  bi_1.utt
tamil/scripts/: vuv.pl
tamil/wav/: 1.raw  1.trace
